src/scss/modules/modal.scss
@mixin form-btn() {
  @extend %btn;

  min-width: 100px;
  padding: 7px 10px;
  color: $color-white;
  background-color: $color-primary;
  border-radius: 3px;

  &:not([disabled]):hover {
    background-color: $color-yellow;
  }
}

.modal {
  justify-content: center;
  align-items: center;
  position: absolute;
  top: 0;
  left: 0;
  z-index: 10;
  width: 100%;
  height: 100%;
  padding: 50px 20px;
  background-color: rgba(45, 45, 68, 0.6);
  overflow: auto;
  box-sizing: border-box;
  opacity: 0;
  visibility: hidden;
  transform: translateY(-20%);
  transition: $transition;

  &--show {
    opacity: 1;
    visibility: visible;
    transform: translateY(0);
  }

  &__content {
    width: 100%;
    margin: 0 auto;
    padding: 20px;
    background-color: $color-white;
    box-shadow: -1px 5px 12px 0 rgba(89, 90, 90, 0.3);
    border-radius: $bdrs;
    box-sizing: border-box;

    @include breakpoint-min(sm) {
      width: 350px;
    }
  }

  &__forms {
    margin-bottom: 15px;
    padding: 10px;
    color: $color-grey;
    border: none;
    border-radius: 3px;

    &-title {
      margin-bottom: 10px;
      color: $color-primary;
      font-size: 25px;
      font-weight: 700;
    }

    &-checkbox {
      appearance: none;
      -webkit-appearance: none;
      -moz-appearance: none;

      &:focus ~ .modal__forms-label-checkbox {
        &::before {
          background-image: url(../images/checkbox-focus.svg);
        }
      }

      &:checked ~ .modal__forms-label-checkbox {
        &::before {
          background-image: url(../images/checkbox-active.svg);
        }
      }
    }

    &-label {
      display: inline-block;
      margin-bottom: 7px;
      margin-right: 10px;

      &-checkbox {
        position: relative;
        padding-left: 30px;

        &::before {
          content: "";
          position: absolute;
          left: 0;
          top: 50%;
          width: 20px;
          height: 20px;
          background: url(../images/checkbox-default.svg) no-repeat;
          background-size: contain;
          transform: translateY(-50%);
        }
      }
    }

    &-text {
      width: 100%;
      padding: 10px;
      margin-bottom: 30px;
      font: inherit;
      vertical-align: middle;
      border-radius: 3px;
      border: 1px solid $color-grey;
      resize: none;
      box-sizing: border-box;

      &:focus {
        outline-color: $color-yellow;
      }

      &:last-of-type {
        margin-bottom: 20px;
      }
    }
  }

  &__buttons {
    text-align: center;
  }

  &__button {
    @include form-btn();

    &:disabled {
      opacity: 0.25;
    }

    &--ok {
      margin-right: 15px;
    }
  }
}

.upload-btn {
  position: relative;
  width: 100%;
  margin-bottom: 30px;

  &__input {
    opacity: 0;
    visibility: hidden;
    position: absolute;
  }

  &__label {
    display: flex;
    // width: 100%;

    &-box {
      width: 50%;
      min-height: 30px;
      margin-bottom: 0;
      text-align: center;
      border-right: none;
      border-top-right-radius: 0;
      border-bottom-right-radius: 0;
    }

    &-btn {
      @include form-btn();

      display: flex;
      align-items: center;
      position: relative;
      max-width: 50%;
      padding-left: 35px;
      text-align: center;
      border-top-left-radius: 0;
      border-bottom-left-radius: 0;

      &::before {
        content: "";
        position: absolute;
        left: 10px;
        width: 20px;
        height: 20px;
        background: url(../images/download.svg) no-repeat;
      }
    }
  }
}

